--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,13 @@
 {
+    "name": "totallyquiche/github-label-importer",
+    "description": "Import labels from one GitHub repo into another",
     "require": {
+        "php": "^8.1",
         "knplabs/github-api": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "http-interop/http-factory-guzzle": "^1.0"
     },
     "autoload": {
-        "psr-4": {"TotallyQuiche\\GithubLabelImporter\\": "src/"}
+        "psr-4": {"Totallyuiche\\GithubLabelImporter\\": "src/"}
     }
 }
